TURKISH/listings/ch03-common-programming-concepts/output-only-01-no-type-annotations/output.txt
$ cargo build
   Compiling degiskenler v0.1.0 (/home/rusdili/projeler/degiskenler)
error[E0282]: type annotations needed
 --> src/main.rs:2:9
  |
2 |     let guess = "42".parse().expect("Not a number!");
  |         ^^^^^ consider giving `guess` a type

For more information about this error, try `rustc --explain E0282`.
error: could not compile `no_type_annotations` due to previous error
